Bug 376013 [a11y]Incorrect text information sent in "object:text-changed:insert" events.patch by Evan.Yan at sun.com r=aaronleventhal